--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-package-lock=false
+package-lock=true
 
 ; Set a new registry for a scoped package
 @azmisahin:registry=https://registry.azmisahin.com              
